make sure the Caster has all necessary methods, so the compiler can choose a better/faster match